--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -67,15 +67,17 @@
 
     /* Menu Lateral */
     .menu__container {
-        height: 89%;
+        left: 0;
+        height: auto;
         width: 74px;
+        top: 80px;
     }
 
     .menu__lista {
-        display: flex;
-        justify-content: space-around;
         flex-direction: column;
-        padding-top: 0px;
+        justify-content: flex-start;
+        padding-top: 15px;
+        gap: 83px;
     }
 
     /* Footer */
